# sdk

./: .eslintrc.cjs  .gitignore  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  ERRORS.md  LukuIDSDK.podspec  NOTICE  README.md  REVOCATIONS.md  SECURITY.md  SUPPORT.md  TRUST_PROFILES.md  attestation_dac_der.der  attestation_intermediate_der.der  attestation_manufacturer_der.der  build.gradle.kts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sbom.cdx.json  settings.gradle.kts  tsconfig.base.json
.github/: pull_request_template.md
.github/workflows/: android.yml  ios.yml  js.yml  python.yml  rust.yml
docs/: android.md  apple.md  architecture.md  devices.md  exporting.md  js.md  python.md  rust.md  snippets.md  verification.md
examples/: javascript-node-verify.md  javascript-web-verify.md  kotlin-verify.md  python-verify.md  rust-verify.md  swift-verify.md
examples/android-demo/: README.md  build.gradle.kts  proguard-rules.pro
examples/ios-demo/: README.md
examples/node-cli/: README.md  cli.js  package.json
examples/react-native-demo/: App.tsx  README.md  package.json
examples/react-web-demo/: index.html  package.json  tsconfig.json  vite.config.ts
examples/rust-cli/: Cargo.toml
examples/web-demo/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
scripts/: generate_js_proto.mjs  version_sync.py
src/android/: LukuIDPDFSigner.kt
src/ios/: LukuIDPDFSigner.swift
src/ios-spm-wrapper/: Package.swift.template  README.md
src/python/: README.md  pyproject.toml
src/python/lukuid_sdk/: __init__.py  attestation.py  luku.py  revocation.py
src/python/tests/: test_attestation_metadata.py  test_attestation_payloads.py  test_envelope.py  test_guardcard_environment_canonical.py  test_guardcard_parity.py  test_hardening.py  test_luku.py  test_negative.py  test_pqc.py  test_selftest.py
src/rust/lukuid-sdk/: Cargo.toml  README.md
src/rust/lukuid-sdk/src/: attestation.rs  device.rs  framing.rs  lib.rs  luku.rs  models.rs  parser.rs  revocation.rs  transport.rs  url_utils.rs
src/rust/lukuid-sdk/src/transport/: ble.rs  serial.rs
src/rust/lukuid-sdk/tests/: attestation_payload_tests.rs  device_unverified_tests.rs  envelope_tests.rs  guardcard_parity_tests.rs  guardcard_voc_proto_tests.rs  hardening_tests.rs  luku_tests.rs  negative_tests.rs  pqc_tests.rs
tools/: build-cdn.mjs  create-xcframework.sh  find_gradle_module.py
tools/codegen/: README.md
tools/linting/: README.md
tools/release/: README.md
(+161 files in other folders)
