[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lukuid-sdk"
version = "0.1.0"
description = "Python .luku archive support for the LukuID SDK"
requires-python = ">=3.11"
license = "Apache-2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/lukuid/sdk"
Repository = "https://github.com/lukuid/sdk"

[tool.setuptools.packages.find]
where = ["."]
