[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lukuid-sdk"
version = "1.0.7"
description = "Python .luku archive support for the LukuID SDK"
requires-python = ">=3.11"
dependencies = [
    "asn1crypto>=1.5.1",
    "cryptography>=41.0.0",
    "liboqs-python>=0.14.0",
]
license = "Apache-2.0"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/lukuid/sdk"
Repository = "https://github.com/lukuid/sdk"

[tool.setuptools.packages.find]
where = ["."]
